# workspace

./: .pre-commit-config.yaml  README.md  pyproject.toml
algorithm/: a_ster.py  grid_world.py
docs/: sh.md  ssh.md
docs/3DModel/: basic.md  blender.md  fbx.md  mesh_simplification.md  obj.md
docs/API/: design_pattern.md  rest.md
docs/GraphQL/: graphql.md
docs/JS_TS/: decorator.md  null.md
docs/RDBMS/: postgresql.md
docs/alogorithm/: heap.md
docs/application/: sass.md
docs/cmake/: cmake.md
docs/cpp/: cpp.md
docs/ffmpeg/: build_ffmpeg.sh  ffmpeg.md
docs/flutter/: flutter.md  go_router.md  riverpod.md
docs/git/: cpp.md  git.md  gpg.md  macos.md  poetry.md  pre_commit.md  sign.md  style.md
docs/http/: status_code.md
docs/kaggle/: error_function.md
docs/latex/: build.md  setting.md
docs/machine_learning/: basic.md  libaries.md  pytorch.md
docs/machine_learning/NLP/: CTranslate2.md  QLoRA.md  basic.md  distributed_representation.md  gpt_2.md  llm_foundry.md  morphological_analysis.md  token.md
docs/machine_learning/NLP/huggingface/: gpt2_customize.md  run_clm.md  transformers.md
docs/os/: amazon_linux2.md  linux.md  macos.md
docs/pm/: recommendation.md
docs/python/: drf.md  pandas.md  poetry.md  python.md  redshift.md  shaka.md  uv.md
docs/super_resolation/: SRCNN.md  SRFlow.md
docs/tips/: disk.md  imagemagick.md  line_separator.md  monorepo_polyrepo.md  oh_my_zsh.md  shell_command.md  ssh.md  video.md
memos/: README.md
memos/kaggle/: 20230809.md
papers/: LIMA.md
