[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["shunki <bono0504@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
